# event-notifier-bot

./: README.md
api/: .env.test  database.db  docker-compose.test.yml  pyproject.toml
api/scripts/: test.sh
api/src/: app.py
api/src/api/: __init__.py  deps.py
api/src/api/routers/: __init__.py  event.py
api/src/core/: __init__.py  config.py  exceptions.py
api/src/database/: __init__.py  base_session.py  migrations.py  session.py
api/src/middleware/: __init__.py  error_handler.py
api/src/models/: __init__.py  event.py
api/src/schemas/: __init__.py  event.py
api/src/service/: __init__.py  event_service.py  factory.py
api/tests/: conftest.py  database.py
api/tests/e2e/: __init__.py  test_event.py
api/tests/unit/core/: test_config.py
api/tests/unit/service/: test_event_service.py
bot/: .env.test  celerybeat-schedule.db  pyproject.toml
bot/scripts/: format.sh  test.sh
bot/src/: app.py  celery_task.py  tasks.py
bot/src/core/: __init__.py  config.py  exceptions.py
bot/src/model/: __init__.py  event.py
bot/src/service/: __init__.py  event.py  factory.py  utils.py
bot/tests/unit/core/: test_config.py
